début de travail sur le csv

--- a/app/views/main.ejs
+++ b/app/views/main.ejs
@@ -7,7 +7,7 @@
     <title>csv_to_pdf</title>
 </head>
 <body>
-    <form action="/up" method="post" enctype="multipart/form-data">
+    <form action="/" method="post" enctype="multipart/form-data">
         <input type="file" name="uploaded_file" />
         <button type="submit">Submit</button>
     </form>
